clusters/main/kubernetes/system/networkpolicies/app/vpa-allow-ingress-webhook.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-webhook
  namespace: vpa
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: admission-controller
      app.kubernetes.io/instance: vpa
      app.kubernetes.io/name: vpa
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
